tests/bad/extra_arg.td
/// fail: Function bar expected 1 arguments, got 2

def bar(a) => a

bar("2", 45)
